--- a/style.css
+++ b/style.css
@@ -96,6 +96,14 @@ body{
     text-align: center;
     margin: 2rem;
     font-size: 2rem;
+    position: absolute;
+    background-color: black;
+    color: #eee;
+    padding: 1rem 2rem;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    margin: 0;
 }
 
 @media only screen and (max-width: 600px){
