separar tiktok de web

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body{
         width: 100%;
         justify-content: space-between;
     }
-    .puntos{
-        
+    .titulo{
+        font-size: 3rem;
     }
 }
